# artifacts/api-server/src/routes/index.ts
@@ -6,15 +6,21 @@ import coinsRouter from "./coins";
 import rafflesRouter from "./raffles";
 import notificationsRouter from "./notifications";
 import adminRouter from "./admin";
+import followsRouter from "./follows";
+import searchRouter from "./search";
+import storageRouter from "./storage";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use("/users", usersRouter);
+router.use("/users", followsRouter);
 router.use("/posts", postsRouter);
 router.use("/coins", coinsRouter);
 router.use("/raffles", rafflesRouter);
 router.use("/notifications", notificationsRouter);
 router.use("/admin", adminRouter);
+router.use("/search", searchRouter);
+router.use("/storage", storageRouter);
 
 export default router;
